--- a/front-end/feedbacks.html
+++ b/front-end/feedbacks.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sfatuitori</title>
+    <title>Feedback</title>
+    <link rel="stylesheet" href="feedbacks.css">
 </head>
 <body>
-    
+    <div class="topnav">
+        <a href="#">Home</a>
+        <a class="active" href="#">Sfatuitori</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+    </div>
+    <footer>Copyright</footer>
 </body>
 </html>
