adaugat celelalte elemente  mai ramane de ajustat css-ul

--- a/front-end/home.html
+++ b/front-end/home.html
@@ -58,6 +58,9 @@
 			</p>
 			<div class="postari-list-element_footer"><button>rating</button> <button>Comment</button> <div class="status">Status:Complet</div>
 		</div>
+		<div class="add-comment">
+			<textarea id="casuta-comment" placeholder="add-comment"></textarea><button>posteaza</button>
+		</div>
 			<div class="replies">
 				<div class="buton-raspuns"><button>sageata</button>Reply Sfatuitori </div>
 				<div class="reply_form">
