--- a/front-end/home.html
+++ b/front-end/home.html
@@ -13,12 +13,12 @@
 		<a class="active" href="./home.html">Home</a>
 		<a href="./feedbacks.html">Sfatuitori</a>
 		<a href="https://github.com/AzdHyperman/WebProject">About</a>
-		<a href="#">Contact</a>
+		<a href="#page_footer">Contact</a>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
 		<div class="Username"><button id="avatar-btn" class="userbox"><img src="#" alt="avatar"></button><label href="#">Username</label> </div>
 	</header>
 
-	<h1 class="titlu_proiect">Purchase Council Adviser</h1>
+	<h1 class="titlu_proiect">Purchase Advising Council</h1>
 
 	<main class="center-page">
 		<div class="postare">
@@ -121,7 +121,7 @@
 		</div>
 		<!-- pagina centrala -->
 	</main>
-	<footer>
+	<footer id="page_footer">
 		<section>
 			<h2>Social</h2>
 			<p>Facebook</p>
