--- a/front-end/feedbacks.html
+++ b/front-end/feedbacks.html
@@ -13,7 +13,7 @@
 		<a href="./home.html">Home</a>
 		<a class="active" href="./feedbacks.html">Sfatuitori</a>
 		<a href="https://github.com/AzdHyperman/WebProject">About</a>
-		<a href="#">Contact</a>
+		<a href="#page_footer">Contact</a>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
 		<div class="Username"><button id="avatar-btn" class="userbox"><img src="#" alt="avatar"></button><label href="#">Username</label> </div>
 	</header>
