--- a/scholary.html
+++ b/scholary.html
@@ -83,7 +83,8 @@
                         <h4> JavaScript </h4>
                         <p>
                             Pentru a face switch-ul login/register a paginii de autentificare am folosit 2 functii implementate in javascript,
-                            ce modifica display-ul formularul de login din "on" in "off", respectiv register din "off" in "on". 
+                            ce modifica display-ul formularul de login din "on" in "off", respectiv register din "off" in "on".
+                            La bara de navigatie s-a folosit javascript pentru o face responsiv atunci cand comutam pe un dispozitiv mobil.
                         </p>
 
                         <h4> CSS </h4>
