--- a/scholary.html
+++ b/scholary.html
@@ -85,6 +85,7 @@
                             Pentru a face switch-ul login/register a paginii de autentificare am folosit 2 functii implementate in javascript,
                             ce modifica display-ul formularul de login din "on" in "off", respectiv register din "off" in "on".
                             La bara de navigatie s-a folosit javascript pentru o face responsiv atunci cand comutam pe un dispozitiv mobil.
+                            La pagina de urmeaza sa fie implementata in back-end un buton ce extinde raspunsurile la o postare pentru a citi parerile date de consiliu
                         </p>
 
                         <h4> CSS </h4>
@@ -93,6 +94,11 @@
                               Flex este o metoda de a orienta/pozitiona continut in pagina html.
                               Astfel prin cateva variabile in CSS am putut creea un site responsiv cu dimesiune ajustabila a continutului unde 
                               Flex a fost creat pentru asta.
+                          </p>
+                          <h5>Coloristica </h5>
+                          <p>
+                              S-au folosit culori de tenda inchisa albastru si mov, pe alocuri nistre gradiente intre galben si albastru. 
+                              Link-urile catre aceste culori se gasesc la capitolul "External Help".
                           </p>
                     </li>
 
@@ -124,6 +130,15 @@
             </li>
             <li>
                 <a href="https://mycolor.space/gradient">Gradient</a> un tool folosit pentru colorizarea site-ului.
+            </li>
+            <li>
+                <a href="https://colorhunt.co/palette/17117">Paleta_culoare_1</a> una din paleta de culori folosite.
+            </li>
+            <li>
+                <a href="https://colorhunt.co/palette/2763">Paleta_culoare_2</a> una din paleta de culori folosite.
+            </li>
+            <li>
+                <a href="https://fonts.google.com/specimen/Kiwi+Maru?preview.text_type=custom">Font_utilizat</a> un font utilizat la proiect.
             </li>
         </ul>
     </section>
