--- a/scholary.html
+++ b/scholary.html
@@ -85,7 +85,7 @@
                             Pentru a face switch-ul login/register a paginii de autentificare am folosit 2 functii implementate in javascript,
                             ce modifica display-ul formularul de login din "on" in "off", respectiv register din "off" in "on".
                             La bara de navigatie s-a folosit javascript pentru o face responsiv atunci cand comutam pe un dispozitiv mobil.
-                            La pagina de urmeaza sa fie implementata in back-end un buton ce extinde raspunsurile la o postare pentru a citi parerile date de consiliu
+                            La pagina de urmeaza sa fie implementata in back-end un buton ce extinde raspunsurile la o postare pentru a citi parerile date de consiliu.
                         </p>
 
                         <h4> CSS </h4>
@@ -106,13 +106,11 @@
             </li>
             <li>
                 <h3> Backend</h3>
-                    <p>
-                        Urmeaza sa fie implementate.
-                    </p>
+                <p> Urmeaza sa fie implementate. </p>
             </li>
             <li>
                 <h3>Database</h3>
-                <p>Urmeaza sa fie implementate. </p>
+                <p> Urmeaza sa fie implementate. </p>
             </li>
                 
     </section>
