--- a/proba_final/home.html
+++ b/proba_final/home.html
@@ -15,12 +15,28 @@
 		<a href="https://github.com/AzdHyperman/WebProject">About</a>
 		<a href="#page_footer">Contact</a>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
-		<div class="Username"><button id="avatar-btn" class="userbox"><img src="#" alt="avatar"></button><label href="#">Username</label> </div>
+		<div class="Username">
+			<button class="userbox" onclick="userMenu()">
+				<img src="#" alt="avatar"></button>
+				<label href="#">Username</label> 
+				<div class="dropdown-content">
+					<a href="#">Profile</a>
+					<a href="#">Admin</a>
+					<a href="#">DarkMode?</a>
+					<a href="#">Logout</a>
+				</div>
+		</div>
 	</header>
 
 	<h1 class="titlu_proiect">Purchase Advising Council</h1>
 
 	<main class="center-page">
+		<form class="example" action="/action_page.php">
+			<input type="text" placeholder="Search.." name="search">
+			<button type="submit"><i class="fa fa-search"></i></button>
+		  </form>
+		  
+
 		<div class="postare">
 			<textarea id="text-postare" maxlength=1000 placeholder="Scrie ceva ..."></textarea>
 			<div class="postare-element_footer">
@@ -51,10 +67,9 @@
 		<div class="postari-list">
 			<div class="postari-list-element">
 				<div class="postari-list-element_header">Username : Client</div>
-				<p>
-					Acesta este un text pentru a umple acest box pentru prezentarea front-end-ului , 
-					urmand si fie text ce va fi stocat in baza de date, text reprezentant cerinta clientului,
-					raspunsuri, comentarii, note, linkuri etc.. 
+				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+					Magnam eligendi natus vero repudiandae in vel eius alias aspernatur tenetur impedit, 
+					laboriosam quasi nisi beatae, nobis voluptas placeat illum quae! Quos!
 				</p>
 				<div class="postari-list-element_footer">
 					<button>rating</button> 
@@ -66,13 +81,13 @@
 					<button>posteaza</button>
 				</div>
 				<div class="replies">
-					<button id="buton-raspuns">sageata</button>
+					<button class="buton-raspuns">sageata</button>
 					<div class="reply_form">
 						<div class="reply_header">Username : Sfatuitori</div>
-						<p>
-							Acesta este un text pentru a umple acest box pentru prezentarea front-end-ului , 
-							urmand si fie text ce va fi stocat in baza de date, text reprezentant cerinta clientului,
-							raspunsuri, comentarii, note, linkuri etc.. 
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+							Nostrum expedita deleniti accusantium repellendus soluta harum,
+						 	delectus velit dolores temporibus tempore eligendi, 
+						 	suscipit eveniet cumque nihil dolorum quo dicta, obcaecati asperiores?
 						</p>
 						<div class="reply_footer">
 							<button>rating</button>
@@ -86,10 +101,9 @@
 						<!-- 2 -->
 					<div class="reply_form">
 						<div class="reply_header">Username : Sfatuitori</div>
-						<p>	
-							Acesta este un text pentru a umple acest box pentru prezentarea front-end-ului , 
-							urmand si fie text ce va fi stocat in baza de date, text reprezentant cerinta clientului,
-							raspunsuri, comentarii, note, linkuri etc.. 
+						<p>	Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, dicta. 
+							Sint maiores voluptatum possimus nam aliquam dolorem laudantium facere vero 
+							dolor tenetur porro ipsa unde quibusdam ratione, nesciunt quo perspiciatis?
 						</p>
 						<div class="reply_footer">
 							<button>rating</button>
@@ -98,10 +112,7 @@
 					</div>
 					<div class="reply_form">
 						<div class="reply_header">Username : Sfatuitori</div>
-						<p>
-							Acesta este un text pentru a umple acest box pentru prezentarea front-end-ului , 
-								urmand si fie text ce va fi stocat in baza de date, text reprezentant cerinta clientului,
-							raspunsuri, comentarii, note, linkuri etc.. 
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente natus porro exercitationem fuga rem laborum excepturi, eos aliquid. Perspiciatis dolor quo veritatis, modi quasi harum adipisci? Eveniet sint iure laudantium.
 						</p>
 						<div class="reply_footer">
 							<button>rating</button>
@@ -115,10 +126,8 @@
 				<!-- #2 -->
 			<div class="postari-list-element">
 				<div class="postari-list-element_header">Username : Client</div>
-						Acesta este un text pentru a umple acest box pentru prezentarea front-end-ului , 
-						urmand si fie text ce va fi stocat in baza de date, text reprezentant cerinta clientului,
-						raspunsuri, comentarii, note, linkuri etc.. 
-					<div class="postari-list-element_footer">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ipsum amet dolorem possimus labore reiciendis architecto asperiores. Nihil alias dolore totam reiciendis beatae. Aut enim, fuga ratione neque similique amet.
+				<div class="postari-list-element_footer">
 					<button>rating</button>
 					<button>Comment</button> 
 					<div class="status">Status:Complet</div>
@@ -130,21 +139,21 @@
 	</main>
 	<footer id="page_footer">
 		<section>
-			<h2>Team</h2>
-			<p>Vasilescu Andrei</p>
-			<p>Ivan Alexandru</p>
-			<p>Martinas Alex</p>
+			<h2>Social</h2>
+			<p>Facebook</p>
+			<p>Instagram</p>
+			<p>Watsapp</p>
 		</section>
 		<section>
 			<h2>About</h2>
-			<p>Web Tehnologies Project</p>
+			<p>@Site smecher srl</p>
 		</section>
 		<section>
-			<h2>GitHub</h2>
-			<a href="https://github.com/AzdHyperman/WebProject">Repository</a>
+			<h2>Contact</h2>
+			<p>Nr telefon</p>
 		</section>
+		<!-- pt bara de navigare -->
 	</footer>
-
 	<script>
 		function myFunction() 
 		{
@@ -159,18 +168,23 @@
 				}
 		}
 
-		var button = document.getElementById("buton-raspuns");
-		button.onclick = function() {
-			var x = document.getElementsByClassName("reply_form");
-			if (x.style.display !== 'none') 
-			{
-        		x.style.display = 'none';
-    		}
-   			 else 
-			{
-        		x.style.display = 'flex';
-   			}
-		}
+		function userMenu() {
+  document.getElementById("myDropdown").classList.toggle("show");
+}
+
+// Close the dropdown if the user clicks outside of it
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}
 	</script>
 </body>
 </html>
