--- a/proba_final/home.html
+++ b/proba_final/home.html
@@ -15,7 +15,17 @@
 		<a href="https://github.com/AzdHyperman/WebProject">About</a>
 		<a href="#page_footer">Contact</a>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
-		<div class="Username"><button id="avatar-btn" class="userbox"><img src="#" alt="avatar"></button><label href="#">Username</label> </div>
+		<div class="Username">
+			<button class="userbox" onclick="userMenu()">
+				<img src="#" alt="avatar"></button>
+				<label href="#">Username</label> 
+				<div class="dropdown-content">
+					<a href="./profile.html">Profile</a>
+					<a href="./admin.html">Admin</a>
+					<a href="#">DarkMode?</a>
+					<a href="./login.html">Logout</a>
+				</div>
+		</div>
 	</header>
 
 	<h1 class="titlu_proiect">Purchase Advising Council</h1>
@@ -170,6 +180,23 @@
 			{
         		x.style.display = 'flex';
    			}
+		}
+		function userMenu() {
+  			document.getElementById("myDropdown").classList.toggle("show");
+		}
+
+		// Close the dropdown if the user clicks outside of it
+		window.onclick = function(event) {
+  		if (!event.target.matches('.dropbtn')) {
+    		var dropdowns = document.getElementsByClassName("dropdown-content");
+    		var i;
+    		for (i = 0; i < dropdowns.length; i++) {
+      			var openDropdown = dropdowns[i];
+      			if (openDropdown.classList.contains('show')) {
+        			openDropdown.classList.remove('show');
+      				}
+   				}
+ 			}
 		}
 	</script>
 </body>
