--- a/proba_final/feedbacks.html
+++ b/proba_final/feedbacks.html
@@ -10,12 +10,22 @@
 </head>
 <body>
 	<header class="topnav" id="myTopnav">
-		<a href="./home.html">Home</a>
-		<a class="active" href="./feedbacks.html">Sfatuitori</a>
+		<a class="active" href="./home.html">Home</a>
+		<a href="./feedbacks.html">Sfatuitori</a>
 		<a href="https://github.com/AzdHyperman/WebProject">About</a>
 		<a href="#page_footer">Contact</a>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
-		<div class="Username"><button id="avatar-btn" class="userbox"><img src="#" alt="avatar"></button><label href="#">Username</label> </div>
+		<div class="Username">
+			<button class="userbox" onclick="userMenu()">
+				<img src="#" alt="avatar"></button>
+				<label href="#">Username</label> 
+				<div class="dropdown-content">
+					<a href="./profile.html">Profile</a>
+					<a href="./admin.html">Admin</a>
+					<a href="#">DarkMode?</a>
+					<a href="./login.html">Logout</a>
+				</div>
+		</div>
 	</header>
 
     <main class="container">
