--- a/proba_final/profile.html
+++ b/proba_final/profile.html
@@ -9,11 +9,23 @@
 </head>
 <body>
     <header class="topnav" id="myTopnav">
-        <a class="active" href="./home.html">Home</a>
-        <a href="./feedbacks.html">Sfatuitori</a>
-        <a href="https://github.com/AzdHyperman/WebProject">About</a>
-        <a href="#page_footer">Contact</a>
-        </header>
+		<a class="active" href="./home.html">Home</a>
+		<a href="./feedbacks.html">Sfatuitori</a>
+		<a href="https://github.com/AzdHyperman/WebProject">About</a>
+		<a href="#page_footer">Contact</a>
+		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+		<div class="Username">
+			<button class="userbox" onclick="userMenu()">
+				<img src="#" alt="avatar"></button>
+				<label href="#">Username</label> 
+				<div class="dropdown-content">
+					<a href="./profile.html">Profile</a>
+					<a href="./admin.html">Admin</a>
+					<a href="#">DarkMode?</a>
+					<a href="./login.html">Logout</a>
+				</div>
+		</div>
+	</header>
         <h1 id="titlu_proiect">Profilul tau</h1>
         <div class="center-page">
             <div class="profile">
