--- a/front-end/php/home.html
+++ b/front-end/php/home.html
@@ -5,7 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Home</title>
-	<link rel="stylesheet" href="home.css">
+	<link rel="stylesheet" href="../css/normalsize/home.css">
+	<link rel="stylesheet" href="../css/responsive/homeR.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -20,10 +21,10 @@
 				<img src="#" alt="avatar"></button>
 				<label href="#">Username</label> 
 				<div class="dropdown-content">
-					<a href="#">Profile</a>
-					<a href="#">Admin</a>
+					<a href="./profile.html">Profile</a>
+					<a href="./admin.html">Admin</a>
 					<a href="#">DarkMode?</a>
-					<a href="#">Logout</a>
+					<a href="./login.html">Logout</a>
 				</div>
 		</div>
 	</header>
@@ -31,12 +32,6 @@
 	<h1 class="titlu_proiect">Purchase Advising Council</h1>
 
 	<main class="center-page">
-		<form class="example" action="/action_page.php">
-			<input type="text" placeholder="Search.." name="search">
-			<button type="submit"><i class="fa fa-search"></i></button>
-		  </form>
-		  
-
 		<div class="postare">
 			<textarea id="text-postare" maxlength=1000 placeholder="Scrie ceva ..."></textarea>
 			<div class="postare-element_footer">
@@ -67,9 +62,10 @@
 		<div class="postari-list">
 			<div class="postari-list-element">
 				<div class="postari-list-element_header">Username : Client</div>
-				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-					Magnam eligendi natus vero repudiandae in vel eius alias aspernatur tenetur impedit, 
-					laboriosam quasi nisi beatae, nobis voluptas placeat illum quae! Quos!
+				<p>
+					Acesta este un text pentru a umple acest box pentru prezentarea front-end-ului , 
+					urmand si fie text ce va fi stocat in baza de date, text reprezentant cerinta clientului,
+					raspunsuri, comentarii, note, linkuri etc.. 
 				</p>
 				<div class="postari-list-element_footer">
 					<button>rating</button> 
@@ -81,13 +77,13 @@
 					<button>posteaza</button>
 				</div>
 				<div class="replies">
-					<button class="buton-raspuns">sageata</button>
+					<button id="buton-raspuns">sageata</button>
 					<div class="reply_form">
 						<div class="reply_header">Username : Sfatuitori</div>
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-							Nostrum expedita deleniti accusantium repellendus soluta harum,
-						 	delectus velit dolores temporibus tempore eligendi, 
-						 	suscipit eveniet cumque nihil dolorum quo dicta, obcaecati asperiores?
+						<p>
+							Acesta este un text pentru a umple acest box pentru prezentarea front-end-ului , 
+							urmand si fie text ce va fi stocat in baza de date, text reprezentant cerinta clientului,
+							raspunsuri, comentarii, note, linkuri etc.. 
 						</p>
 						<div class="reply_footer">
 							<button>rating</button>
@@ -101,9 +97,10 @@
 						<!-- 2 -->
 					<div class="reply_form">
 						<div class="reply_header">Username : Sfatuitori</div>
-						<p>	Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, dicta. 
-							Sint maiores voluptatum possimus nam aliquam dolorem laudantium facere vero 
-							dolor tenetur porro ipsa unde quibusdam ratione, nesciunt quo perspiciatis?
+						<p>	
+							Acesta este un text pentru a umple acest box pentru prezentarea front-end-ului , 
+							urmand si fie text ce va fi stocat in baza de date, text reprezentant cerinta clientului,
+							raspunsuri, comentarii, note, linkuri etc.. 
 						</p>
 						<div class="reply_footer">
 							<button>rating</button>
@@ -112,7 +109,10 @@
 					</div>
 					<div class="reply_form">
 						<div class="reply_header">Username : Sfatuitori</div>
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente natus porro exercitationem fuga rem laborum excepturi, eos aliquid. Perspiciatis dolor quo veritatis, modi quasi harum adipisci? Eveniet sint iure laudantium.
+						<p>
+							Acesta este un text pentru a umple acest box pentru prezentarea front-end-ului , 
+								urmand si fie text ce va fi stocat in baza de date, text reprezentant cerinta clientului,
+							raspunsuri, comentarii, note, linkuri etc.. 
 						</p>
 						<div class="reply_footer">
 							<button>rating</button>
@@ -126,8 +126,10 @@
 				<!-- #2 -->
 			<div class="postari-list-element">
 				<div class="postari-list-element_header">Username : Client</div>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ipsum amet dolorem possimus labore reiciendis architecto asperiores. Nihil alias dolore totam reiciendis beatae. Aut enim, fuga ratione neque similique amet.
-				<div class="postari-list-element_footer">
+						Acesta este un text pentru a umple acest box pentru prezentarea front-end-ului , 
+						urmand si fie text ce va fi stocat in baza de date, text reprezentant cerinta clientului,
+						raspunsuri, comentarii, note, linkuri etc.. 
+					<div class="postari-list-element_footer">
 					<button>rating</button>
 					<button>Comment</button> 
 					<div class="status">Status:Complet</div>
@@ -139,21 +141,21 @@
 	</main>
 	<footer id="page_footer">
 		<section>
-			<h2>Social</h2>
-			<p>Facebook</p>
-			<p>Instagram</p>
-			<p>Watsapp</p>
+			<h2>Team</h2>
+			<p>Vasilescu Andrei</p>
+			<p>Ivan Alexandru</p>
+			<p>Martinas Alex</p>
 		</section>
 		<section>
 			<h2>About</h2>
-			<p>@Site smecher srl</p>
+			<p>Web Tehnologies Project</p>
 		</section>
 		<section>
-			<h2>Contact</h2>
-			<p>Nr telefon</p>
+			<h2>GitHub</h2>
+			<a href="https://github.com/AzdHyperman/WebProject">Repository</a>
 		</section>
-		<!-- pt bara de navigare -->
 	</footer>
+
 	<script>
 		function myFunction() 
 		{
@@ -168,23 +170,35 @@
 				}
 		}
 
+		var button = document.getElementById("buton-raspuns");
+		button.onclick = function() {
+			var x = document.getElementsByClassName("reply_form");
+			if (x.style.display !== 'none') 
+			{
+        		x.style.display = 'none';
+    		}
+   			 else 
+			{
+        		x.style.display = 'flex';
+   			}
+		}
 		function userMenu() {
-  document.getElementById("myDropdown").classList.toggle("show");
-}
+  			document.getElementById("myDropdown").classList.toggle("show");
+		}
 
-// Close the dropdown if the user clicks outside of it
-window.onclick = function(event) {
-  if (!event.target.matches('.dropbtn')) {
-    var dropdowns = document.getElementsByClassName("dropdown-content");
-    var i;
-    for (i = 0; i < dropdowns.length; i++) {
-      var openDropdown = dropdowns[i];
-      if (openDropdown.classList.contains('show')) {
-        openDropdown.classList.remove('show');
-      }
-    }
-  }
-}
+		// Close the dropdown if the user clicks outside of it
+		window.onclick = function(event) {
+  		if (!event.target.matches('.dropbtn')) {
+    		var dropdowns = document.getElementsByClassName("dropdown-content");
+    		var i;
+    		for (i = 0; i < dropdowns.length; i++) {
+      			var openDropdown = dropdowns[i];
+      			if (openDropdown.classList.contains('show')) {
+        			openDropdown.classList.remove('show');
+      				}
+   				}
+ 			}
+		}
 	</script>
 </body>
 </html>
