modificat foldere pentru bara de navigare si footer

--- a/front-end/php/admin.html
+++ b/front-end/php/admin.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="../css/normalsize/navbar.css">
+	<link rel="stylesheet" href="../css/normalsize/footer.css">
 	<link rel="stylesheet" href="../css/normalsize/admin.css">
 	<link rel="stylesheet" href="../css/responsive/adminR.css">
     <title>Log page</title>
@@ -17,7 +19,8 @@
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
 		<div class="Username">
 			<button class="userbox" onclick="userMenu()">
-				<img src="#" alt="avatar"></button>
+				<img class="avatar"alt="Profile" src="../imagini/default-avatar.png">
+			</button>
 				<label href="#">Username</label> 
 				<div class="dropdown-content">
 					<a href="./profile.html">Profile</a>
