--- a/front-end/php/feedbacks.html
+++ b/front-end/php/feedbacks.html
@@ -7,6 +7,8 @@
     <title>Feedback</title>
 	<link rel="stylesheet" href="../css/normalsize/feedbacks.css">
 	<link rel="stylesheet" href="../css/responsive/feedbacksR.css">
+	<link rel="stylesheet" href="../css/normalsize/navbar.css">
+	<link rel="stylesheet" href="../css/normalsize/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
