--- a/front-end/php/home.html
+++ b/front-end/php/home.html
@@ -6,7 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Home</title>
 	<link rel="stylesheet" href="../css/normalsize/home.css">
+	<link rel="stylesheet" href="../css/normalsize/navbar.css">
+	<link rel="stylesheet" href="../css/normalsize/footer.css">
 	<link rel="stylesheet" href="../css/responsive/homeR.css">
+	<link rel="stylesheet" href="../css/responsive/navbar.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -18,7 +21,7 @@
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
 		<div class="Username">
 			<button class="userbox" onclick="userMenu()">
-				<img src="#" alt="avatar"></button>
+				<img class="avatar" alt="Profile" src="../imagini/default-avatar.png"></button>
 				<label href="#">Username</label> 
 				<div class="dropdown-content">
 					<a href="./profile.html">Profile</a>
