--- a/front-end/php/profile.html
+++ b/front-end/php/profile.html
@@ -7,6 +7,8 @@
     <title>Profile Page</title>
     <link rel="stylesheet" href="../css/normalsize/profile.css">
 	<link rel="stylesheet" href="../css/responsive/profileR.css">
+    <link rel="stylesheet" href="../css/normalsize/navbar.css">
+	<link rel="stylesheet" href="../css/normalsize/footer.css">
 </head>
 <body>
     <header class="topnav" id="myTopnav">
@@ -17,7 +19,8 @@
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
 		<div class="Username">
 			<button class="userbox" onclick="userMenu()">
-				<img src="#" alt="avatar"></button>
+                <img class="avatar"alt="Profile" src="../imagini/default-avatar.png">
+            </button>
 				<label href="#">Username</label> 
 				<div class="dropdown-content">
 					<a href="./profile.html">Profile</a>
@@ -30,7 +33,7 @@
         <h1 id="titlu_proiect">Profilul tau</h1>
         <div class="center-page">
             <div class="profile">
-            <img alt="Profile" src="imagini/profil.jpg">
+            <img alt="Profile" src="../imagini/default-avatar.png">
             <input type="file" name="myImage" accept="image/*" />
         </div>
             <form  action="profil.php">
